--- a/styles/style.css
+++ b/styles/style.css
@@ -52,3 +52,9 @@ body{
             margin-left: 50px;
         }
 
+@font-face {
+  font-family: 'MyCustomFont';  
+  src: url('/fonts/RubikWetPaint-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
