--- a/styles/style.css
+++ b/styles/style.css
@@ -3,7 +3,7 @@
     padding: 0;
 }
 body{
-    background-color: black;
+    background-color: white;
 }
 #preloader {
   position: fixed;
@@ -54,7 +54,7 @@ body{
 
 @font-face {
   font-family: 'MyCustomFont';  
-  src: url('fonts/RubikWetPaint-Regular.ttf') format('truetype');
+  src: url('/fonts/RubikWetPaint-Regular.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
