--- a/styles/style.css
+++ b/styles/style.css
@@ -54,7 +54,7 @@ body{
 
 @font-face {
   font-family: 'MyCustomFont';  
-  src: url('/fonts/RubikWetPaint-Regular.ttf') format('truetype');
+  src: url('../fonts/RubikWetPaint-Regular.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
